--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "css-loader": "^6.6.0",
     "eslint": "^8.24.0",
     "eslint-plugin-react": "^7.31.8",
+    "eslint-plugin-react-hooks": "^4.3.0",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
